kubernetes_deployment/auth-api/auth-ns.yml
--namespace for all the deployments and services for authentication
apiVersion: v1
kind: Namespace
metadata:
  name: auth-ns
  labels:
    name: auth-nss
