kubernetes_deployment/auth-api/auth-grpc-dp.yml
--same as auth-api-dp.yml but for grpc
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-grpc-dp
  labels:
    app: auth-grpc
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth-grpc
  template:
    metadata:
      labels:
        app: auth-grpc
    spec:
      containers:
      - name: auth-grpc
        image: auth-grpc:latest
        ports:
        - containerPort: 50051
          protocol: TCP
