kubernetes_deployment/auth-api/auth-mongodb-ss.yml
# statefulset for mongodb
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: auth-api-mongodb-ss
  labels:
    namespace: auth-ns
spec:
  replicas: 3
  selector:
    matchLabels:
      namespace: auth-ns
  serviceName: auth-api-mongodb-svc
  template:
    metadata:
      labels:
        namespace: auth-ns
    spec:
      containers:
      - name: mongodb
        image: img-reg:5000/mongo:dev
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: auth-api-mongodb-pv-claim
          mountPath: /data/db
      volumes:
      - name: auth-api-mongodb-pv-claim
        persistentVolumeClaim:
          claimName: auth-api-mongodb-pv-claim
