kubernetes_deployment/auth-api/auth-redis-ss.yml
# statefulset for redis
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: auth-api-redis-ss
  labels:
    app: auth-api-redis-ss
    namespace: auth-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-api-redis-ss
      namespace: auth-ns
  serviceName: auth-api-redis-svc
  template:
    metadata:
      labels:
        app: auth-api-redis-ss
        namespace: auth-ns
    spec:
      containers:
      - name: redis
        image: img-reg:5000/redis:dev
        ports:
        - containerPort: 6379
        volumeMounts:
        - name: redis-data
          mountPath: /data
      volumes:
      - name: redis-data
        persistentVolumeClaim:
          claimName: auth-api-redis-pv-claim
