kubernetes_deployment/auth-api/auth-api-svc.yml
--service for the auth-api-dp
apiVersion: v1
kind: Service
metadata:
  name: auth-api-svc
  labels:
    app: auth-api
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  type: ClusterIP
  selector:
    app: auth-api
