kubernetes_deployment/auth-api/auth-grpc-svc.yml
--service for api-grpc-dp
apiVersion: v1
kind: Service
metadata:
  name: auth-grpc-svc
  labels:
    app: auth-grpc
    namespace: auth-ns
spec:
  ports:
  - port: 50051
    targetPort: 50051
    protocol: TCP
  type: ClusterIP
  selector:
    app: auth-grpc
