kubernetes_deployment/auth-api/auth-mongodb-svc.yml
-- service for mongodb per application only accessible within the same cluster
apiVersion: v1
kind: Service
metadata:
  name: auth-api-mongodb-svc
  labels:
    app: auth-api
    namespace: auth-ns
spec:
  type: ClusterIP
  ports:
  - port: 27017
    targetPort: 27017
  selector:
    app: auth-api
