kubernetes_deployment/auth-api/auth-redis-svc.yml
# service for redis per application only accessible within the same cluster
apiVersion: v1
kind: Service
metadata:
  name: auth-api-redis-svc
  labels:
    namespace: auth-ns
spec:
  type: ClusterIP
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: auth-api
